[X0526A] Update feature: 1. Load API_Key.ini to login shioaji 2. Function the basic fetching stock tick API.

--- a/API_Key.ini
+++ b/API_Key.ini
@@ -1,2 +1,3 @@
-Key=9wA3Wos5ZAeSgqZjqwp81whvhGMnXLQMun9ixH5Qdzoi 
-SecretKEEY=5i1jXikWsFCxbLUtMjrL53Fi28wpFrT9F8kBzE8BC5K6
+[API_Key]
+Key = 9wA3Wos5ZAeSgqZjqwp81whvhGMnXLQMun9ixH5Qdzoi 
+SecreatKEY = 5i1jXikWsFCxbLUtMjrL53Fi28wpFrT9F8kBzE8BC5K6
